@@ -3,13 +3,15 @@ For the first public release:
 [X] Split OSA.app() in OSA.app_with_name(), OSA.app_with_bundle_id(), 
     OSA.app_with_signature(), OSA.app_with_path and implement them.
 [X] Add elements write support.
-[ ] Check type consistency of given method args.
 [X] Rewrite the sdef parser using native libxml2 code.
 [X] Allow the possibility to set a timeout for an AppleEvent.
 [X] Allow the possibility to desactivate the lazy AppleEvent sends.
-[ ] Add an option to generate a Ruby stub file with RDoc comments according to 
-    the sdef description tags.
+[X] Add a tool to generate RDoc documentation.
 
 Further releases:
 
+[ ] Check type consistency of given method args.
 [ ] Investigate unrecognized types.
+[ ] Unicode support.
+[ ] Get rid of module_eval calls by using Module#define_method to create 
+    methods.
